Regsiter Ash prefs in mash

In classic ash, Chrome will invoke registering Ash prefs to the
asctive user's pref service, but in mash, Ash (as a pref service
client) must do that itself before connecting to the pref service.

BUG=721751

Review-Url: https://codereview.chromium.org/2879243003
Cr-Commit-Position: refs/heads/master@{#472137}

Former-commit-id: 606424bd7f6b579fdc99e1d230911b68147ecb31